fix: SVG on high contrast (fix #136 and #236) (#237)
* feat: use <symbol>s to embed svgs and apply search icon as inline svg

* feat: svgs now adjust colors to high contrast themes

* fix: hide ellipsis when a post excerpt is fully displayed

* fix: adjust the default and focus/hover stylings for social media icons

* fix: improve colors of social media icons with low contrast themes

* fix: fix issues with the dropdown menu on the mobile layout

* fix: css clean up

* fix: fix the javascript for the search feature on the mobile layout

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,1 +1,23 @@
 // Mixins.
+@mixin adapt-to-highContrast($fColor, $bColor) {
+	// Social media icons
+	footer .footer-content .social-media .social-media-icons a {
+		svg path {
+			fill: currentColor;
+			stroke: $bColor;
+		}
+
+		&:hover,
+		&:focus {
+			svg path {
+				fill: $bColor;
+				stroke: currentColor;
+			}
+		}
+	}
+
+	// Hide ellipsis when a post excerpt is fully displayed
+	.news-grid .api-content .news-item .preview-content::after {
+		background: $bColor;
+	}
+}
